08.Kubernetes/manifest/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployement
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "256Mi"
            cpu: "500m"
            ephemeral-storage: "2Gi"
        volumeMounts:
          - name: my-volume
            mountPath: /usr/share/nginx/html

      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc
