08.Kubernetes/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app.kubernetes.io/name: nginx-ingress
  namespace: nginx
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/nginx"
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: myapp-service
              port: 
                number: 80
